--- a/GRP 15/pokemonApp/src/app/tab1/tab1.page.html
+++ b/GRP 15/pokemonApp/src/app/tab1/tab1.page.html
@@ -1,52 +1,76 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> Pokedex </ion-title>
+    <ion-title>
+      Buscar Pokémon
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-searchbar
-    (search)="pesquisar($event)"
-    [(ngModel)]="valorSearch"
-  ></ion-searchbar>
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      
+      <ion-title size="large">Encontrar Pokémon</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-  <ion-list>
-    <ion-grid>
-      <ion-row>
-        <ion-col size="6" *ngFor="let pokemon of pokemons">
-          <ion-card>
-            <ion-card-header [class]="pokemon.types[0].type.name + 'T'" (click)="pokeFraqueza(pokemon.types)">
-              {{ pokemon.name }}
-            </ion-card-header>
-  
-            <ion-card-content [class]="'ion-padding ' + 'accordion ' + pokemon.types[0].type.name + 'T' ">
-              <img src="{{ pokemon.sprites.front_default }}" alt="{{ pokemon.name }}"/>
+  <ion-card>
+    <ion-card-header>
+      <ion-input
+        [(ngModel)]="areaBuscarPokemon"
+        [counter]="true"
+        fill="solid"
+        helperText="Digite seu CEP para encontrar um Pokemon"
+        labelPlacement="floating"
+        label="CEP"
+        maxlength="8"
+        placeholder="1122233"
+        type="text"
+      ></ion-input>
 
-              <div>
-                <ion-label color="success">Vitórias:0</ion-label>
-              </div>
-  
-              <div>
-                <ion-label color="danger">Derrotas:0</ion-label>
-              </div>
-  
-              <div>
-                <ion-label color="warning">Empates:0</ion-label>
-              </div>
+      <ion-button
+        expand="block"
+        fill="solid"
+        (click)="buscarPokemon(areaBuscarPokemon)"
+      >
+        Encontrar
+        <ion-icon name="search" slot="end"></ion-icon>
+      </ion-button>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          {{
+            this.areaBusca.logradouro +
+            this.areaBusca.bairro +
+            this.areaBusca.localidade +
+            this.areaBusca.uf
+          }}
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>
+        {{pokemon.name| uppercase}}
+        <ion-img alt="" src="{{pokemon.image}}">
 
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ion-list>
-  
-  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
-    <ion-infinite-scroll-content
-      loadingSpinner="crescent"
-      loadingText="Carregando..."
-    >
-    </ion-infinite-scroll-content>
-  </ion-infinite-scroll>
-
+        </ion-img>
+      </ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-label>Abilities: {{pokemon.abilities}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Height: {{pokemon.height}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Weigth: {{pokemon.weight}}</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
