--- a/GRP 15/pokemonApp/src/app/tabs/tabs.page.html
+++ b/GRP 15/pokemonApp/src/app/tabs/tabs.page.html
@@ -1,22 +1,20 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" >
-      <ion-icon src="assets/pokemon.svg" color="light"></ion-icon>
-      <ion-label color="light">Pokedex</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab2">
-      <ion-icon aria-hidden="true" name="invert-mode-outline"></ion-icon>
-      <ion-label>Batalhar</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="tab1" href="/tabs/tab1">
       <ion-icon aria-hidden="true" name="search"></ion-icon>
       <ion-label>Buscar</ion-label>
     </ion-tab-button>
 
+    <ion-tab-button tab="tab2" href="/tabs/tab2">
+      <ion-icon aria-hidden="true" name="invert-mode-outline"></ion-icon>
+      <ion-label>Batalhar</ion-label>
+    </ion-tab-button>
 
+    <ion-tab-button tab="tab3" href="/tabs/tab3">
+      <ion-icon aria-hidden="true" name="desktop-outline"></ion-icon>
+      <ion-label>Pokedex</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
